# homelab-ai

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  config.example.yaml  docker-compose.example.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
deploy/tunnels/: README.md
deploy/tunnels/cloudflared/: .env.example  README.md  config.yml  docker-compose.yml
deploy/tunnels/tailscale/: .env.example  README.md  docker-compose.yml
docs/: adding-services.md  adding-tools.md  api.md  architecture.md  declarative-services.md  features.md  migration.md
docs/images/: README.md
examples/: custom_agent_module.py  custom_service.py
homelab_ai/: __init__.py  __main__.py  config.py  features.py  history.py  init_wizard.py  scheduler.py
homelab_ai/agent/: __init__.py  failure_memory.py  loop.py
homelab_ai/agent/modules/: __init__.py  anomaly_detector.py  base.py  container_doctor.py  container_resources.py  disk_forecast.py  disk_watcher.py  import_watchdog.py  service_health.py  vpn_watchdog.py
homelab_ai/api/: main.py
homelab_ai/api/routers/: agent.py  ai.py  auth.py  config_editor.py  history.py  mcp_http.py  rag.py  services.py  settings.py  webhooks.py
homelab_ai/auth/: __init__.py  middleware.py  passwords.py  sessions.py
homelab_ai/automations/: __init__.py  engine.py
homelab_ai/demo/: __init__.py  fake_services.py  runner.py
homelab_ai/discovery/: __init__.py  probe.py
homelab_ai/fixer/: __init__.py  audit.py  backup.py  tier1_rules.py  tier2_small.py  tier3_smart.py
homelab_ai/llm/: __init__.py  base.py  multi.py  ollama.py  openai_compat.py
homelab_ai/mcp/: __init__.py  server.py  tool_router.py
homelab_ai/notifications/: __init__.py  backends.py  notifier.py
homelab_ai/observability/: __init__.py  metrics.py
homelab_ai/rag/: __init__.py  fusion.py  manifest.py  rerank.py  store.py  text.py  tiers.py
homelab_ai/services/: __init__.py  adguard.py  arr.py  audiobookshelf.py  base.py  bazarr.py  calibre_web.py  changedetection.py  command.py  generic_http.py  gluetun.py  grafana.py  home_assistant.py  homebox.py  immich.py  jellyfin.py  jellyseerr.py  kavita.py  lidarr.py  mealie.py  mullvad.py  n8n.py  nextcloud.py  nut.py  ollama.py  overseerr.py  paperless.py  prowlarr.py  qbittorrent.py  radarr.py  readarr.py  registry.py  sabnzbd.py  searxng.py  sonarr.py  tdarr.py  transmission.py  uptime_kuma.py
homelab_ai/ui/static/: app.html  manifest.json
homelab_ai/verify/: __init__.py  builtin_checks.py  runner.py
tests/: conftest.py  test_agent_loop.py  test_anomaly_detector.py  test_api_integration.py  test_auth.py  test_automations.py  test_command_service.py  test_config.py  test_config_editor.py  test_demo_mode.py  test_discovery.py  test_disk_forecast.py  test_failure_memory.py  test_features.py  test_fixer.py  test_generic_http.py  test_history.py  test_imports.py  test_init_wizard.py  test_llm.py  test_mcp_http.py  test_metrics.py  test_mullvad.py  test_multi_llm.py  test_notifications.py  test_notifier_backends.py  test_nut.py  test_pwa_chat_history.py  test_pwa_streaming_html.py  test_rag.py  test_release_workflow.py  test_scheduler.py  test_services.py  test_status_cli.py  test_tool_router.py  test_tool_spec.py  test_tunnel_templates.py  test_v05_plugins.py  test_verify.py  test_webhooks.py  (+2 more)
