[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "homelab-ai"
version = "0.1.0"
description = "Self-hosted AI orchestrator for your homelab — monitors services, self-heals, exposes everything as MCP tools for any LLM to drive."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "homelab-ai contributors" }]
keywords = ["homelab", "ai", "llm", "selfhosted", "mcp", "ollama", "monitoring", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "aiohttp>=3.9",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
metrics = ["prometheus-client>=0.20"]
rag = ["chromadb>=0.5", "rank-bm25>=0.2"]
scheduler = ["croniter>=2.0"]
auth = ["bcrypt>=4.0"]
all = ["homelab-ai[mcp,metrics,rag,scheduler,auth]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.9",
    "types-PyYAML",
    "types-croniter",
    # Dev install pulls in the extras so the full test suite covers them.
    "prometheus-client>=0.20",
    "croniter>=2.0",
    "bcrypt>=4.0",
    "rank-bm25>=0.2",
]

[project.scripts]
homelab-ai = "homelab_ai.__main__:main"

[project.urls]
Homepage = "https://github.com/JeremiahM37/homelab-ai"
Documentation = "https://github.com/JeremiahM37/homelab-ai#readme"
Repository = "https://github.com/JeremiahM37/homelab-ai"
Issues = "https://github.com/JeremiahM37/homelab-ai/issues"

[tool.setuptools.packages.find]
include = ["homelab_ai*"]

[tool.setuptools.package-data]
homelab_ai = ["ui/static/*", "ui/static/**/*", "config.default.yaml"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = [
    "E501",   # line length
    "B008",   # FastAPI uses Body(...) in defaults idiomatically
    "B904",   # `raise from` chain — readable as-is in this code
    "SIM117", # nested `with` is clearer than stacked context managers here
    "UP006",  # legacy typing.List is fine for compatibility
    "UP007",  # X | Y union syntax not always cleaner
    "UP037",  # quoted forward refs are needed under TYPE_CHECKING
    "UP045",  # X | None vs Optional[X] — both fine
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401", "F811"]   # test imports + redefinitions are expected

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
